--- a/sentinel-demo/sentinel-demo-annotation-spring-aop/pom.xml
+++ b/sentinel-demo/sentinel-demo-annotation-spring-aop/pom.xml
@@ -39,5 +39,10 @@
             <artifactId>spring-boot-starter-web</artifactId>
             <version>${spring.boot.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.alibaba.csp</groupId>
+            <artifactId>sentinel-datasource-apollo</artifactId>
+        </dependency>
     </dependencies>
 </project>
